--- a/Assignment 2 - cloudbuild - EXAMPLE (1).yaml
+++ b/Assignment 2 - cloudbuild - EXAMPLE (1).yaml
@@ -2,14 +2,15 @@ steps:
   # Docker Build
   - name: 'gcr.io/cloud-builders/docker'
     args: ['build', '-t', 
-           'us-central1-docker.pkg.dev/semester-2-408906/demo-0000000000/assignment2:${SHORT_SHA}', 
+           'us-central1-docker.pkg.dev/helpful-airway-447521/gcp-pipeline-assignment/assignment2:${SHORT_SHA}', 
            '.']
 
   # Docker Push
   - name: 'gcr.io/cloud-builders/docker'
     args: ['push', 
-           'us-central1-docker.pkg.dev/semester-2-408906/demo-0000000000/assignment2:${SHORT_SHA}']
+           'us-central1-docker.pkg.dev/helpful-airway-447521/gcp-pipeline-assignment/assignment2:${SHORT_SHA}']
 
+  # Deploy to Cloud Run
   - name: 'gcr.io/google.com/cloudsdktool/cloud-sdk'
     entrypoint: gcloud
     args:
@@ -17,12 +18,12 @@ steps:
     - 'deploy'
     - 'assignment2'
     - '--image'
-    - 'us-central1-docker.pkg.dev/semester-2-408906/demo-0000000000/assignment2:${SHORT_SHA}'
+    - 'us-central1-docker.pkg.dev/helpful-airway-447521/gcp-pipeline-assignment/assignment2:${SHORT_SHA}'
     - '--region'
     - 'us-central1'
     
 images:
-  - 'us-central1-docker.pkg.dev/semester-2-408906/demo-0000000000/assignment2:${SHORT_SHA}'
-  
+  - 'us-central1-docker.pkg.dev/helpful-airway-447521/gcp-pipeline-assignment/assignment2:${SHORT_SHA}'
+
 options:
     defaultLogsBucketBehavior: REGIONAL_USER_OWNED_BUCKET
